[Nav] Fix alignment on small screens (#3166)

--- a/src/components/Navigation/_variables.scss
+++ b/src/components/Navigation/_variables.scss
@@ -155,6 +155,7 @@ $nav-animation-variables: (
   .Navigation-newDesignLanguage & {
     margin-top: spacing(tight);
     margin-bottom: spacing(tight);
+    margin-right: spacing();
   }
   .Item-selected &,
   .Item-selected:hover &,
